avoid overflow x

--- a/src/components/Asesoria.css
+++ b/src/components/Asesoria.css
@@ -1,46 +1,51 @@
 .asesoria-container {
-    background-color: #1b1545;
-    padding-top: 40px;
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-    height: 575px;
-    min-height: fit-content;
-  }
-  
-  .asesoria-vector {
-    opacity: 0.7;
-    position: absolute;
-    right: 20vw;
-  }
-  
-  .asesoria-subcontainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .asesoria-img-container {
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    z-index: 0;
-  }
-  
-  .asesoria-box {
-    height: 493px;
-    width: 890px;
-    background: linear-gradient(45deg, #1F1CA9 0%, #BF3378 100%);
-    border-top-right-radius: 5rem;
-    opacity: 0.7;
-    position: absolute;
-    z-index: -1;
-    margin-top: 65px;
-    left: 0;
-  }
-  
+  background-color: #1b1545;
+  padding-top: 40px;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 575px;
+  min-height: fit-content;
+}
+
+.asesoria-vector {
+  opacity: 0.7;
+  position: absolute;
+  right: 20vw;
+}
+
+.asesoria-subcontainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.asesoria-img-container {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  z-index: 0;
+}
+
+.asesoria-box {
+  height: 493px;
+  width: clamp(300px, 80vw, 890px);
+  background: linear-gradient(45deg, #1f1ca9 0%, #bf3378 100%);
+  opacity: 0.7;
+  position: absolute;
+  z-index: -1;
+  margin-top: 65px;
+  left: 0;
+}
+
+.stef-img {
+  width: clamp(400px, 50vw, 650px); 
+  height: auto; 
+  object-fit: cover; 
+  z-index: 1;
+}
 .asesoria-button {
   width: 100%;
   max-width: 450px;
@@ -49,7 +54,7 @@
   border: 2px solid white;
   color: white;
   font-size: clamp(18px, 4vw, 36px);
-  background-color: #1B1545;
+  background-color: #1b1545;
   position: absolute;
   z-index: 10;
   margin-top: 200px;
@@ -60,66 +65,66 @@
   text-align: center;
   padding: 0 20px;
 }
-  
-  
+
+.asesoria-text-container {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  text-align: center;
+  z-index: 1000;
+}
+
+@media (max-width: 1200px) {
+  .asesoria-vector {
+    display: none;
+  }
   .asesoria-text-container {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: white;
-    text-align: center;
-    z-index: 1000;
+    top: 20px;
+  }
+  .asesoria-box {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .asesoria-subcontainer {
+    flex-direction: column-reverse;
   }
 
-  @media (max-width: 1200px) {
-    .asesoria-vector {
-      display: none;
-    }
-    .asesoria-text-container {
-        top: 20px;
-    }
-    .asesoria-box {
-        display: none;
-    }
+  .asesoria-box {
+    display: block;
+    left: 0px;
+    border-top-left-radius: 5rem;
   }
-
-  @media (max-width: 768px) {
-    .asesoria-subcontainer {
-        flex-direction: column-reverse;
-      }
-
-      .asesoria-box {
-        display: block;
-        left: 0px;
-        border-top-left-radius: 5rem;
-      }
-      .asesoria-nivel {
-        margin-bottom: 0px;
-      }
-  }
-  
-  .asesoria-text {
-    font-size: 32px;
-    width: 300px;
-    margin: 0;
-  }
-  
   .asesoria-nivel {
-    font-size: 8em;
-    margin-top: 0;
-    background: linear-gradient(45deg, #1F1CA9 0%, #BF3378 100%);
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: nowrap;
-    gap: 40px;
+    margin-bottom: 0px;
   }
-  
-  .asesoria-nivel img {
-    vertical-align: middle;
-  }
-  
+}
+
+.asesoria-text {
+  font-size: 32px;
+  width: 300px;
+  margin: 0;
+}
+
+.asesoria-nivel {
+  font-size: clamp(80px, 10vw, 120px); /* Tamaño dinámico */
+  gap: clamp(10px, 5vw, 40px); /* También hacemos responsive el espacio */
+  margin-top: 0;
+  background: linear-gradient(45deg, #1f1ca9 0%, #bf3378 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+
+.asesoria-nivel img {
+  vertical-align: middle;
+  width: clamp(80px, 10vw, 120px);
+      
+}
