--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
-body {
+html, body {
   font-family: "Roboto", sans-serif;
   background-color: #1a1a1a;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  width: 100%;
 }
